# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import jobsRouter from "./jobs";
 import toolsRouter from "./tools";
 import buildersRouter from "./builders";
 import adminRouter from "./admin";
+import dashboardRouter from "./dashboard";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(jobsRouter);
 router.use(toolsRouter);
 router.use(buildersRouter);
 router.use(adminRouter);
+router.use(dashboardRouter);
 
 export default router;
